manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
    name: howto-k8s-retry-policy
    labels:
        mesh: howto-k8s-retry-policy
        appmesh.k8s.aws/sidecarInjectorWebhook: enabled
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
    name: color
    namespace: howto-k8s-retry-policy
spec:
    awsName: color.howto-k8s-retry-policy.svc.cluster.local
    provider:
        virtualRouter:
            virtualRouterRef:
                name: color
---
apiVersion: v1
kind: Service
metadata:
    name: front
    namespace: howto-k8s-retry-policy
spec:
    ports:
        - port: 5000
          name: http
    selector:
        app: front
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: front
    namespace: howto-k8s-retry-policy
spec:
    replicas: 1
    selector:
        matchLabels:
            app: front
    template:
        metadata:
            labels:
                app: front
        spec:
            containers:
                - name: app
                  image: yuto425/appmesh_k8s_retry_test
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 5000
                  readinessProbe:
                      httpGet:
                          path: /hc
                          port: 5000
                          scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
    name: color
    namespace: howto-k8s-retry-policy
spec:
    ports:
        - port: 5000
          name: http
    selector:
        app: color
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: blue
    namespace: howto-k8s-retry-policy
spec:
    replicas: 1
    selector:
        matchLabels:
            app: color
            version: blue
    template:
        metadata:
            labels:
                app: color
                version: blue
        spec:
            containers:
                - name: app
                  image: yuto425/appmesh_k8s_retry_test
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 5000
                  readinessProbe:
                      httpGet:
                          path: /hc
                          port: 5000
                          scheme: HTTP
